Add new image for mass-spring system and update index.html to use local source

--- a/Parte 1/site/templates/index.html
+++ b/Parte 1/site/templates/index.html
@@ -116,7 +116,7 @@
                 Esse comportamento da mola maluca é uma ótima maneira de visualizar o conceito de ondas mecânicas, que são ondas de energia que se movem através de um meio (no caso, a mola). O movimento da mola maluca mostra como energia pode se propagar ao longo de um objeto, sem que o próprio objeto se mova completamente de uma vez.
             </p>
 
-            <img class="w-120 mx-auto mt-8" src="https://cdn.discordapp.com/attachments/1306620765394833469/1338134980907368531/mola.png?ex=67b09250&is=67af40d0&hm=74636004d457f19adcb2330afa8ef7f67d01fba6f33ff2c2febfdc3ab403d077&" alt="imagem da mola como um sistema de massa mola">
+            <img class="w-120 mx-auto mt-8" src="/static/images/mola-como-um-sistema.png" alt="imagem da mola como um sistema de massa mola">
 
         </section>
 
