Add new images and videos, update HTML to include experimental data and graphs

--- a/Parte01/site/templates/index.html
+++ b/Parte01/site/templates/index.html
@@ -47,13 +47,13 @@
                 <div class="flex flex-col gap-2">
                     <img class="max-h-[360px] w-fit" src="https://gifsdefisica.wordpress.com/wp-content/uploads/2015/03/mola.gif" alt="mola maluca em queda livre">
 
-                    <caption class="text-sm text-center"><a target="_blank" class="italic underline text-center" href="https://gifsdefisica.wordpress.com/gifs-de-molas-e-movimento-ondulatorio/">Queda livre da mola maluca</a></caption>
+                    <figcaption class="text-sm text-center"><a target="_blank" class="italic underline text-center" href="https://gifsdefisica.wordpress.com/gifs-de-molas-e-movimento-ondulatorio/">Queda livre da mola maluca</a></figcaption>
                 </div>
 
                 <div class="flex flex-col gap-2">
                     <img class="max-h-[360px] w-fit " src="https://gizmodo.uol.com.br/wp-content/blogs.dir/8/files/2015/08/mola-maluca.gif" alt="mola descendo a escada">
 
-                    <caption class="text-sm text-center"><a target="_blank" class="italic underline text-center" href="https://gizmodo.uol.com.br/escada-rolante-para-mola-maluca/">Mola maluca descendo a escada</a></caption>
+                    <figcaption class="text-sm text-center"><a target="_blank" class="italic underline text-center" href="https://gizmodo.uol.com.br/escada-rolante-para-mola-maluca/">Mola maluca descendo a escada</a></figcaption>
                 </div>
             </div>
         </section>
@@ -146,12 +146,12 @@
 
             <div class="grid grid-cols-3 gap-x-10 mt-8">
                 <video class="h-fit" height="360" autoplay loop muted>
-                    <source src="/static/videos/mola-metal-grande.mp4" type="video/mp4">
+                    <source src="/static/videos/mola-metal-pequena.mp4" type="video/mp4">
                     Seu navegador não suporta a tag de vídeo.
                 </video>
-
+                
                 <video class="h-fit" height="360" autoplay loop muted>
-                    <source src="/static/videos/mola-metal-pequena.mp4" type="video/mp4">
+                    <source src="/static/videos/mola-metal-grande.mp4" type="video/mp4">
                     Seu navegador não suporta a tag de vídeo.
                 </video>
 
@@ -165,7 +165,33 @@
                 A partir disso, analisamos os dados extraídos dos vídeos e transformamos as informações em um gráfico que ilustra a posição de algumas espiras ao longo do tempo. No gráfico, é evidente o comportamento peculiar da última espira, que 'aguarda' as demais para que todas caiam simultaneamente.
             </p>
 
-            <div class="bg-gray-200 w-95 h-76 mx-auto mt-8"></div>
+            <div class="grid grid-cols-3 gap-x-10 mt-8">
+                <div class="flex flex-col gap-4 justify-center">
+                    <img src="/static/images/1.png" alt="Dados experimentais da mola pequena de metal" class="w-full h-auto">
+                    <figcaption class="text-sm text-center">Dados experimentais da mola pequena de metal</figcaption>
+                </div>
+                <div class="flex flex-col gap-4 justify-center">
+                    <img src="/static/images/2.png" alt="Dados experimentais da mola grande de metal" class="w-full h-auto">
+                    <figcaption class="text-sm text-center">Dados experimentais da mola grande de metal</figcaption>
+                </div>
+                <div class="flex flex-col gap-4 justify-center">
+                    <img src="/static/images/3.png" alt="Dados experimentais da mola de plástico" class="w-full h-auto">
+                    <figcaption class="text-sm text-center">Dados experimentais da mola de plástico</figcaption>
+                </div>
+
+                <div class="flex flex-col gap-4 justify-center">
+                    <img src="/static/images/metal_small.png" alt="Gráfico da posição ao longo do tempo da mola pequena de metal" class="w-full h-auto">
+                    <figcaption class="text-sm text-center">Gráfico da posição ao longo do tempo da mola pequena de metal</figcaption>
+                </div>
+                <div class="flex flex-col gap-4 justify-center">
+                    <img src="/static/images/metal_big.png" alt="Gráfico da posição ao longo do tempo da mola grande de metal" class="w-full h-auto">
+                    <figcaption class="text-sm text-center">Gráfico da posição ao longo do tempo da mola grande de metal</figcaption>
+                </div>
+                <div class="flex flex-col gap-4 justify-center">
+                    <img src="/static/images/plastic.png" alt="Gráfico da posição ao longo do tempo da mola de plástico" class="w-full h-auto">
+                    <figcaption class="text-sm text-center">Gráfico da posição ao longo do tempo da mola de plástico</figcaption>
+                </div>
+            </div>
         </section>
 
         <section class="mt-8">
