--- a/Parte01/site/templates/index.html
+++ b/Parte01/site/templates/index.html
@@ -179,6 +179,7 @@
                     <figcaption class="text-sm text-center">Dados experimentais da mola de plástico</figcaption>
                 </div>
 
+
                 <div class="flex flex-col gap-4 justify-center">
                     <img src="/static/images/metal_small.png" alt="Gráfico da posição ao longo do tempo da mola pequena de metal" class="w-full h-auto">
                     <figcaption class="text-sm text-center">Gráfico da posição ao longo do tempo da mola pequena de metal</figcaption>
@@ -287,6 +288,19 @@
             </div>
         </section>
     </main>
+
+    <p class="text-base font-normal mt-4">
+        É interessante observar que, ao simular uma mola de constante elástica K em diferentes gravidades, o tempo de queda é o mesmo, e inicialmente as espiras ficam mais separadas quanto maior a gravidade local devido à força peso nas espiras.
+    </p>
+
+    <p class="text-base font-normal mt-4">
+        Na nossa simulação, consideramos como se a mola possuísse 10 espiras. Por isso, ao observar o gráfico de velocidade é possível identificar 10 "picos", relativos às colisões inelásticas entre as espiras. 
+    </p>
+
+    <p class="text-base font-normal mt-4">
+        Caso queira saber mais, tanto o relatório final quanto o código desenvolvido estarão disponíveis no 
+        <a href="https://github.com/gustavocarvalhaes/Trabalho-Multidisciplinar" class="text-blue-500 underline" target="_blank" rel="noopener noreferrer">GitHub</a>.
+    </p>
  
     <footer class="py-8 grid grid-cols-10 gap-10">
         <hr class="bg-black mt-8 col-span-10 mb-10">
@@ -534,8 +548,8 @@
                     labels: chartConfig.data.time,
                     datasets: [
                         { label: 'Topo', borderColor: '#FFA500', data: chartConfig.data.velFirst },
-                        //{ label: 'Middle 1 Spiral', borderColor: '#00FF00', data: chartConfig.data.velMiddle1 },
-                        //{ label: 'Middle 2 Spiral', borderColor: '#0000FF', data: chartConfig.data.velMiddle2 },
+                        { label: 'Quarta Espira', borderColor: '#00FF00', data: chartConfig.data.velMiddle1 },
+                        { label: 'Sétima Espira', borderColor: '#0000FF', data: chartConfig.data.velMiddle2 },
                         { label: 'Última espira', borderColor: '#00FFFF', data: chartConfig.data.velLast }
                     ]
                 },
@@ -572,8 +586,8 @@
                 chartConfig.data.posLast.push(mola.espiras[numSpirals - 1].y);
                 
                 chartConfig.data.velFirst.push(mola.espiras[0].v);
-                //chartConfig.data.velMiddle1.push(midIndex1-spiralOffset  >= 0 ? mola.espiras[midIndex1-spiralOffset].v : mola.espiras[0].v);
-                //chartConfig.data.velMiddle2.push(midIndex2-spiralOffset  >= 0 ? mola.espiras[midIndex2-spiralOffset].v : mola.espiras[0].v);
+                chartConfig.data.velMiddle1.push(midIndex1-spiralOffset  >= 0 ? mola.espiras[midIndex1-spiralOffset].v : mola.espiras[0].v);
+                chartConfig.data.velMiddle2.push(midIndex2-spiralOffset  >= 0 ? mola.espiras[midIndex2-spiralOffset].v : mola.espiras[0].v);
                 chartConfig.data.velLast.push(mola.espiras[numSpirals - 1].v);
 
                 // Update charts
