Remove fixed dimensions from velocity chart canvas in index.html

--- a/Parte01/site/templates/index.html
+++ b/Parte01/site/templates/index.html
@@ -283,7 +283,7 @@
                     <canvas id="positionChart" width="800" height="400"></canvas>
                 </div>
                 <div class="chart-wrapper">
-                    <canvas id="velocityChart" width="800" height="400"></canvas>
+                    <canvas id="velocityChart"></canvas>
                 </div>
             </div>
         </section>
